gcc/testsuite/rust/rustc/ui/dyn-star/gated-span_dg.rs
macro_rules! t {
    ($t:ty) => {}
}

t!(dyn* Send);
// { dg-error ".E0658." "" { target *-*-* } .-1 }

fn main() {}

